--- a/charts/media/sonarr/values.yaml
+++ b/charts/media/sonarr/values.yaml
@@ -7,7 +7,7 @@ controllers:
       main:
         image:
           repository: linuxserver/sonarr
-          tag: develop-version-4.0.13.2933
+          tag: 4.0.16-develop
           pullPolicy: IfNotPresent
         env:
           PGID: "1000"
