--- a/package.json
+++ b/package.json
@@ -3,19 +3,40 @@
   "version": "1.0.0",
   "description": "Generate docs from charts to the main README.md",
   "author": "Igor Leahu <igor.leahu24@gmail.com>",
+  "packageManager": "npm@11.6.2",
   "workspaces": [
-    "packages/docs"
+    "packages/docs",
+    "packages/cli"
   ],
   "scripts": {
     "prepare": "husky",
-    "generate": "npx tsx packages/docs/src/index.ts",
-    "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "generate": "turbo generate",
+    "cli": "npm run cli --workspace @hobroker/selfhosted-cli",
+    "build": "turbo build",
+    "typecheck": "turbo typecheck",
+    "lint": "turbo lint",
+    "lint:fix": "turbo lint -- --fix",
+    "format": "turbo format",
+    "format:check": "turbo format -- --check"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "@types/eslint__js": "^8.42.3",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-unused-imports": "^4.4.1",
+    "globals": "^17.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
-    "prettier": "^3.8.1"
+    "prettier": "^3.8.1",
+    "react": "^19.2.4",
+    "turbo": "^2.8.10",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.0"
   },
   "lint-staged": {
     "*.{md,yaml}": "prettier --write",
