fix(cli): add fallback in `useServiceStatus` for unknown local app version

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -19,6 +19,7 @@
     "ink": "^6.8.0",
     "ink-select-input": "^6.2.0",
     "ink-text-input": "^6.0.0",
+    "ink-use-stdout-dimensions": "^1.0.5",
     "react": "^19.2.4",
     "yaml": "^2.8.2",
     "zod": "^4.3.6"
