--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -10,6 +10,8 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "dist",
     "jsx": "react-jsx",
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "resolveJsonModule": true
   },
   "include": ["src/**/*"]
