--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,15 +14,11 @@
   },
   "dependencies": {
     "@inkjs/ui": "^2.0.0",
-    "chalk": "^5.6.2",
     "execa": "^9.6.1",
     "ink": "^6.8.0",
-    "ink-select-input": "^6.2.0",
-    "ink-text-input": "^6.0.0",
-    "ink-use-stdout-dimensions": "^1.0.5",
+    "ink-markdown": "^1.0.4",
     "react": "^19.2.4",
-    "yaml": "^2.8.2",
-    "zod": "^4.3.6"
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@types/react": "^19.0.10",
