--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,6 +4,8 @@
   "type": "module",
   "bin": "./dist/index.js",
   "scripts": {
+    "dev": "tsx src/index.tsx",
+    "build": "tsc",
     "typecheck": "tsc --noEmit",
     "cli": "tsx src/index.tsx",
     "lint": "eslint .",
@@ -12,16 +14,21 @@
   },
   "dependencies": {
     "@inkjs/ui": "^2.0.0",
+    "chalk": "^5.6.2",
     "dedent": "^1.7.1",
     "execa": "^9.6.1",
     "ink": "^6.8.0",
-    "marked": "^9.1.6",
-    "marked-terminal": "^6.2.0",
+    "ink-scroll-view": "^0.3.6",
+    "ink-text-input": "^6.0.0",
+    "ink-use-stdout-dimensions": "^1.0.5",
+    "marked": "^9.0.3",
+    "marked-terminal": "^6.0.0",
     "react": "^19.2.4",
-    "yaml": "^2.8.2"
+    "yaml": "^2.8.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@types/marked-terminal": "^3.1.7",
+    "@types/marked-terminal": "^6.1.0",
     "@types/react": "^19.0.10",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
