--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -13,6 +13,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@ink-tools/ink-mouse": "^2.1.0",
     "@inkjs/ui": "^2.0.0",
     "chalk": "^5.6.2",
     "dedent": "^1.7.1",
