--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,20 +15,14 @@
     "@ink-tools/ink-mouse": "^2.1.0",
     "@inkjs/ui": "^2.0.0",
     "ansi-regex": "^6.2.2",
-    "ansi-styles": "^6.2.3",
-    "chalk": "^5.6.2",
     "dedent": "^1.7.1",
     "execa": "^9.6.1",
     "ink": "^6.8.0",
     "ink-scroll-view": "^0.3.6",
-    "ink-spawn": "^0.1.4",
-    "ink-text-input": "^6.0.0",
-    "ink-use-stdout-dimensions": "^1.0.5",
     "marked": "^17.0.3",
     "marked-terminal": "^7.3.0",
     "react": "^19.2.4",
-    "yaml": "^2.8.2",
-    "zod": "^4.3.6"
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@types/marked-terminal": "^6.1.1",
