--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,13 +2,11 @@
   "name": "@hobroker/selfhosted-cli",
   "version": "1.0.0",
   "type": "module",
-  "bin": "./dist/index.js",
   "scripts": {
     "typecheck": "tsc --noEmit",
     "cli": "tsx src/index.tsx",
     "lint": "eslint .",
-    "format": "prettier --write .",
-    "start": "node dist/index.js"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@byteland/ink-scroll-bar": "^1.0.0",
