--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,10 @@ jobs:
         run: npm ci
       - name: Run Prettier
         run: npm run format:check
+      - name: Run ESLint
+        run: npm run lint
+      - name: Run typecheck
+        run: npm run typecheck
 
   helmfile-lint:
     runs-on: ubuntu-latest
